[package]
name = "farm"
version = "0.1.0"
authors = ["Ryan Eberhardt <reberhardt7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
crossbeam-channel = "0.4.2"

[[bin]]
name = "channel"
path = "src/main_channel.rs"